--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="#">
                 <img src="https://th.bing.com/th/id/OIP.eR7PbJyfHEZfwOjg3zKZwwHaHa?rs=1&pid=ImgDetMain" alt="Bootstrap" width="30" height="24">
               </a>
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="#"> NESTDIGITAL</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
